aws_sg_mngr/describe-security-groups.txt
{
    "SecurityGroups": [
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks blank server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-Blank-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-25039f4e"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks custom server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-Custom-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-33039f58"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks database master server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-DB-Master-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2d039f46"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-DB-Master-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2d039f46"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-DB-Master-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2d039f46"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-DB-Master-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-2d039f46"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks Default server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-Default-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-3f039f54"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks Java-App server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-Java-App-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-83f4b7e8"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks load balancer - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-LB-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-27039f4c"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks Memcached server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-Memcached-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-3b039f50"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks Monitoring Ganglia server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-DB-Master-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2d039f46"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Memcached-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-3b039f50"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Default-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-3f039f54"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-DB-Master-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2d039f46"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Memcached-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-3b039f50"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Default-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-3f039f54"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-29039f42"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2f039f44"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-DB-Master-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-2d039f46"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Memcached-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-3b039f50"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Default-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-3f039f54"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Custom-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-33039f58"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-31039f5a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-Java-App-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-83f4b7e8"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-Monitoring-Master-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-39039f52"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks nodejs-App server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-nodejs-App-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-31039f5a"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks PHP-App server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-PHP-App-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-2f039f44"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks Rails-App server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-Web-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-21039f4a"
                        }, 
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-Rails-App-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-29039f42"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "AWS OpsWorks Web server - do not change or delete", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "AWS-OpsWorks-LB-Server", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-27039f4c"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "AWS-OpsWorks-Web-Server", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-21039f4a"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "SecurityGroup for ElasticBeanstalk environment.", 
            "Tags": [
                {
                    "Value": "awseb-e-bykskrmvei-stack", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "pedalcoach-livebeta", 
                    "Key": "Name"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/awseb-e-bykskrmvei-stack/5b622480-8d65-11e5-a42d-50fa5262a89c", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "AWSEBSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "e-bykskrmvei", 
                    "Key": "elasticbeanstalk:environment-id"
                }, 
                {
                    "Value": "pedalcoach-livebeta", 
                    "Key": "elasticbeanstalk:environment-name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "awseb-e-bykskrmvei-stack-AWSEBSecurityGroup-1GGJ6S2TD6BSA", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-e167538b"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "SecurityGroup for ElasticBeanstalk environment.", 
            "Tags": [
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/awseb-e-cuk8hiwref-stack/902b88b0-8d02-11e3-9607-500150b34c44", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "AWSEBSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "awseb-e-cuk8hiwref-stack", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "pedalcoach-production", 
                    "Key": "Name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "amazon-elb-sg", 
                            "UserId": "amazon-elb", 
                            "GroupId": "sg-843f59ed"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "awseb-e-cuk8hiwref-stack-AWSEBSecurityGroup-1WWV1S9F4497O", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-e31f1288"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "SecurityGroup for ElasticBeanstalk environment.", 
            "Tags": [
                {
                    "Value": "pedalcoach-test", 
                    "Key": "Name"
                }, 
                {
                    "Value": "AWSEBSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "awseb-e-gepq2bzenq-stack", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "pedalcoach-test", 
                    "Key": "elasticbeanstalk:environment-name"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/awseb-e-gepq2bzenq-stack/bf056b60-c86e-11e6-9d1b-500c2866f062", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "e-gepq2bzenq", 
                    "Key": "elasticbeanstalk:environment-id"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "amazon-elb-sg", 
                            "UserId": "amazon-elb", 
                            "GroupId": "sg-843f59ed"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "awseb-e-gepq2bzenq-stack-AWSEBSecurityGroup-1H09Z7J4WRU7U", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-0e73d818"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "SecurityGroup for ElasticBeanstalk environment.", 
            "Tags": [
                {
                    "Value": "AWSEBSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/awseb-e-u89cpskp3r-stack/5d878130-6ee0-11e6-a7f1-50d501eed2b3", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "pedalcoach-staging", 
                    "Key": "elasticbeanstalk:environment-name"
                }, 
                {
                    "Value": "pedalcoach-staging", 
                    "Key": "environment-name"
                }, 
                {
                    "Value": "e-u89cpskp3r", 
                    "Key": "elasticbeanstalk:environment-id"
                }, 
                {
                    "Value": "pedalcoach-staging", 
                    "Key": "Name"
                }, 
                {
                    "Value": "awseb-e-u89cpskp3r-stack", 
                    "Key": "aws:cloudformation:stack-name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "amazon-elb-sg", 
                            "UserId": "amazon-elb", 
                            "GroupId": "sg-843f59ed"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "awseb-e-u89cpskp3r-stack-AWSEBSecurityGroup-1CWB5HLS0K6HP", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-8825e99e"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "SecurityGroup for ElasticBeanstalk environment.", 
            "Tags": [
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/awseb-e-uqp38gyx6x-stack/39faa340-06e6-11e5-857f-50e241629418", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "pedalcoach-development", 
                    "Key": "Name"
                }, 
                {
                    "Value": "e-uqp38gyx6x", 
                    "Key": "elasticbeanstalk:environment-id"
                }, 
                {
                    "Value": "awseb-e-uqp38gyx6x-stack", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "pedalcoach-development", 
                    "Key": "elasticbeanstalk:environment-name"
                }, 
                {
                    "Value": "AWSEBSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "amazon-elb-sg", 
                            "UserId": "amazon-elb", 
                            "GroupId": "sg-843f59ed"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "awseb-e-uqp38gyx6x-stack-AWSEBSecurityGroup-1AK2LYKIH2AX2", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-8db324e0"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "SecurityGroup for ElasticBeanstalk environment.", 
            "Tags": [
                {
                    "Value": "e-vypnzhqt32", 
                    "Key": "elasticbeanstalk:environment-id"
                }, 
                {
                    "Value": "pedalcoach-demo1", 
                    "Key": "elasticbeanstalk:environment-name"
                }, 
                {
                    "Value": "AWSEBSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "pedalcoach-demo1", 
                    "Key": "Name"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/awseb-e-vypnzhqt32-stack/53ff90a0-76b3-11e6-952a-50d5cd1ea8d2", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "awseb-e-vypnzhqt32-stack", 
                    "Key": "aws:cloudformation:stack-name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "awseb-e-vypnzhqt32-stack-AWSEBSecurityGroup-RQ3Y0RKX2J9I", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-6fd51c79"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "Cassandra", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 0, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "Cassandra", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-68b2a97f"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 1883, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 1883, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8000, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 8000, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }, 
                        {
                            "CidrIp": "108.20.118.134/32"
                        }
                    ], 
                    "ToPort": 8443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 9042, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 9042, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 9443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }, 
                        {
                            "CidrIp": "108.20.118.134/32"
                        }
                    ], 
                    "ToPort": 9443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8080, 
                    "IpRanges": [
                        {
                            "CidrIp": "108.20.118.134/32"
                        }, 
                        {
                            "CidrIp": "50.176.80.224/32"
                        }, 
                        {
                            "CidrIp": "96.95.188.89/32"
                        }
                    ], 
                    "ToPort": 8080, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8081, 
                    "IpRanges": [
                        {
                            "CidrIp": "108.20.118.134/32"
                        }
                    ], 
                    "ToPort": 8081, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 9993, 
                    "IpRanges": [
                        {
                            "CidrIp": "108.20.118.134/32"
                        }
                    ], 
                    "ToPort": 9993, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "Cassandra", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-68b2a97f"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "default group", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 0, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "default", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-e1ecbc89"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 0, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "default", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-e1ecbc89"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "default", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-e1ecbc89"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }, 
                        {
                            "CidrIp": "100.0.73.174/32"
                        }, 
                        {
                            "CidrIp": "107.18.116.183/32"
                        }, 
                        {
                            "CidrIp": "24.63.143.213/32"
                        }, 
                        {
                            "CidrIp": "64.134.168.220/32"
                        }, 
                        {
                            "CidrIp": "70.195.0.186/32"
                        }, 
                        {
                            "CidrIp": "70.195.5.85/32"
                        }, 
                        {
                            "CidrIp": "75.150.66.249/32"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "default", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-e1ecbc89"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "Access to dev machines from office only", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "50.176.80.224/32"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 11211, 
                    "IpRanges": [
                        {
                            "CidrIp": "50.176.80.224/32"
                        }
                    ], 
                    "ToPort": 11211, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "Development", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-61a32b0a"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "Provides access to Elasticache (needed for both indexing and querying)", 
            "Tags": [
                {
                    "Value": "Elasticache Access", 
                    "Key": "Name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "amazon-elb-sg", 
                            "UserId": "amazon-elb", 
                            "GroupId": "sg-843f59ed"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 9200, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 9200, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "50.176.80.224/32"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "Elasticache Access", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-a93884c4"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "linkedrive webserver", 
            "Tags": [
                {
                    "Value": "linkedrive webserver", 
                    "Key": "Name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 6379, 
                    "IpRanges": [
                        {
                            "CidrIp": "172.30.0.13/32"
                        }, 
                        {
                            "CidrIp": "52.7.241.210/32"
                        }, 
                        {
                            "CidrIp": "54.164.8.96/32"
                        }
                    ], 
                    "ToPort": 6379, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "awseb-e-cuk8hiwref-stack-AWSEBSecurityGroup-1WWV1S9F4497O", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-e31f1288"
                        }, 
                        {
                            "GroupName": "awseb-e-bykskrmvei-stack-AWSEBSecurityGroup-1GGJ6S2TD6BSA", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-e167538b"
                        }, 
                        {
                            "GroupName": "awseb-e-uqp38gyx6x-stack-AWSEBSecurityGroup-1AK2LYKIH2AX2", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-8db324e0"
                        }, 
                        {
                            "GroupName": "awseb-e-u89cpskp3r-stack-AWSEBSecurityGroup-1CWB5HLS0K6HP", 
                            "UserId": "709761231924", 
                            "GroupId": "sg-8825e99e"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 443, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 5666, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 5666, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8080, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 8080, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8140, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 8140, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 9000, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 9000, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 5601, 
                    "IpRanges": [
                        {
                            "CidrIp": "108.20.33.172/32"
                        }, 
                        {
                            "CidrIp": "173.54.12.125/32"
                        }, 
                        {
                            "CidrIp": "174.62.211.11/32"
                        }, 
                        {
                            "CidrIp": "209.6.205.245/32"
                        }, 
                        {
                            "CidrIp": "209.6.37.244/32"
                        }, 
                        {
                            "CidrIp": "79.176.101.136/32"
                        }, 
                        {
                            "CidrIp": "96.95.188.89/32"
                        }
                    ], 
                    "ToPort": 5601, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 9200, 
                    "IpRanges": [
                        {
                            "CidrIp": "173.54.12.125/32"
                        }, 
                        {
                            "CidrIp": "174.62.211.11/32"
                        }, 
                        {
                            "CidrIp": "209.6.205.245/32"
                        }, 
                        {
                            "CidrIp": "209.6.37.244/32"
                        }, 
                        {
                            "CidrIp": "50.187.58.239/32"
                        }, 
                        {
                            "CidrIp": "73.219.237.249/32"
                        }, 
                        {
                            "CidrIp": "79.176.101.136/32"
                        }, 
                        {
                            "CidrIp": "96.95.188.89/32"
                        }
                    ], 
                    "ToPort": 9200, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 49187, 
                    "IpRanges": [
                        {
                            "CidrIp": "50.176.80.224/32"
                        }, 
                        {
                            "CidrIp": "96.95.188.89/32"
                        }
                    ], 
                    "ToPort": 49187, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 3306, 
                    "IpRanges": [
                        {
                            "CidrIp": "69.127.221.136/32"
                        }
                    ], 
                    "ToPort": 3306, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 9033, 
                    "IpRanges": [
                        {
                            "CidrIp": "96.95.188.89/32"
                        }
                    ], 
                    "ToPort": 9033, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "linkedrive webserver", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-7ed13515"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "Open to the world", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "Public", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-ed1b8a86"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "quicklaunch-0", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 20, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 21, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 50000, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 51000, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "quicklaunch-0", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-c91c01a1"
        }, 
        {
            "IpPermissionsEgress": [], 
            "Description": "quicklaunch-1", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8080, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 8080, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "quicklaunch-1", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-f9acbc91"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Load Balancer Security Group", 
            "Tags": [
                {
                    "Value": "ELBEnvironment", 
                    "Key": "Name"
                }, 
                {
                    "Value": "e-is76sy2eph", 
                    "Key": "elasticbeanstalk:environment-id"
                }, 
                {
                    "Value": "ELBEnvironment", 
                    "Key": "elasticbeanstalk:environment-name"
                }, 
                {
                    "Value": "awseb-e-is76sy2eph-stack", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/awseb-e-is76sy2eph-stack/1f123f00-d833-11e6-a7a9-500c28659c35", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "AWSEBLoadBalancerSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/VPC-devenv/43b7eb30-d832-11e6-8f43-50faeaa964fd", 
                    "Key": "Application"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "awseb-e-is76sy2eph-stack-AWSEBLoadBalancerSecurityGroup-2W53RCF16P0C", 
            "VpcId": "vpc-17f14e71", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-d941b8a5"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "VPC Security Group", 
            "Tags": [
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/awseb-e-is76sy2eph-stack/1f123f00-d833-11e6-a7a9-500c28659c35", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "ELBEnvironment", 
                    "Key": "elasticbeanstalk:environment-name"
                }, 
                {
                    "Value": "AWSEBSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "awseb-e-is76sy2eph-stack", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/VPC-devenv/43b7eb30-d832-11e6-8f43-50faeaa964fd", 
                    "Key": "Application"
                }, 
                {
                    "Value": "e-is76sy2eph", 
                    "Key": "elasticbeanstalk:environment-id"
                }, 
                {
                    "Value": "ELBEnvironment", 
                    "Key": "Name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-d941b8a5"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "awseb-e-is76sy2eph-stack-AWSEBSecurityGroup-1SFOCLZP9AQEA", 
            "VpcId": "vpc-17f14e71", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-8841b8f4"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "default VPC security group", 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-3e4b7e5b"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "default", 
            "VpcId": "vpc-6453ed01", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-3e4b7e5b"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "default VPC security group", 
            "IpPermissions": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [], 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-7d4db401"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 3306, 
                    "IpRanges": [
                        {
                            "CidrIp": "96.95.188.89/32"
                        }
                    ], 
                    "ToPort": 3306, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-e64db49a"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "default", 
            "VpcId": "vpc-17f14e71", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-7d4db401"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Provides access to Redis cluster in the VPC", 
            "Tags": [
                {
                    "Value": "Elasticache-VPC", 
                    "Key": "Name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 6379, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 6379, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "Elasticache", 
            "VpcId": "vpc-6453ed01", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-e55f9a99"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Master group for Elastic MapReduce created on 2017-01-31T17:08:27.026Z", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 0, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f0d6428c"
                        }, 
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f7d6428b"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 8443, 
                    "IpRanges": [
                        {
                            "CidrIp": "54.240.217.64/28"
                        }, 
                        {
                            "CidrIp": "72.21.196.64/29"
                        }, 
                        {
                            "CidrIp": "54.240.217.16/29"
                        }, 
                        {
                            "CidrIp": "207.171.167.25/32"
                        }, 
                        {
                            "CidrIp": "207.171.167.26/32"
                        }, 
                        {
                            "CidrIp": "54.239.98.0/24"
                        }, 
                        {
                            "CidrIp": "72.21.198.64/29"
                        }, 
                        {
                            "CidrIp": "207.171.167.101/32"
                        }, 
                        {
                            "CidrIp": "72.21.217.0/24"
                        }, 
                        {
                            "CidrIp": "207.171.172.6/32"
                        }, 
                        {
                            "CidrIp": "54.240.217.8/29"
                        }, 
                        {
                            "CidrIp": "54.240.217.80/29"
                        }
                    ], 
                    "ToPort": 8443, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 0, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f0d6428c"
                        }, 
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f7d6428b"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f0d6428c"
                        }, 
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f7d6428b"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "ElasticMapReduce-master", 
            "VpcId": "vpc-17f14e71", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-f7d6428b"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Slave group for Elastic MapReduce created on 2017-01-31T17:08:27.026Z", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 0, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f0d6428c"
                        }, 
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f7d6428b"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 0, 
                    "IpRanges": [], 
                    "ToPort": 65535, 
                    "IpProtocol": "udp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f0d6428c"
                        }, 
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f7d6428b"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": -1, 
                    "IpRanges": [], 
                    "ToPort": -1, 
                    "IpProtocol": "icmp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f0d6428c"
                        }, 
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-f7d6428b"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "ElasticMapReduce-slave", 
            "VpcId": "vpc-17f14e71", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-f0d6428c"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Created for Elasticsearch 2015-04-21T12:49:28.513-04:00", 
            "Tags": [
                {
                    "Value": "Elasticsearch", 
                    "Key": "Name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "209.6.205.245/32"
                        }, 
                        {
                            "CidrIp": "96.95.188.89/32"
                        }, 
                        {
                            "CidrIp": "108.20.118.134/32"
                        }, 
                        {
                            "CidrIp": "209.6.37.244/32"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 5601, 
                    "IpRanges": [
                        {
                            "CidrIp": "173.76.183.221/32"
                        }, 
                        {
                            "CidrIp": "64.35.201.116/32"
                        }, 
                        {
                            "CidrIp": "75.69.252.208/32"
                        }, 
                        {
                            "CidrIp": "73.219.237.249/32"
                        }, 
                        {
                            "CidrIp": "173.76.181.176/32"
                        }, 
                        {
                            "CidrIp": "73.253.186.19/32"
                        }, 
                        {
                            "CidrIp": "209.6.200.226/32"
                        }, 
                        {
                            "CidrIp": "50.187.58.239/32"
                        }, 
                        {
                            "CidrIp": "75.67.236.14/32"
                        }, 
                        {
                            "CidrIp": "209.6.205.245/32"
                        }, 
                        {
                            "CidrIp": "50.232.84.34/32"
                        }, 
                        {
                            "CidrIp": "64.134.236.190/32"
                        }, 
                        {
                            "CidrIp": "108.20.118.134/32"
                        }, 
                        {
                            "CidrIp": "50.232.84.43/32"
                        }, 
                        {
                            "CidrIp": "96.95.188.89/32"
                        }, 
                        {
                            "CidrIp": "209.6.37.244/32"
                        }, 
                        {
                            "CidrIp": "132.177.238.64/32"
                        }, 
                        {
                            "CidrIp": "24.61.216.61/32"
                        }
                    ], 
                    "ToPort": 5601, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 9300, 
                    "IpRanges": [], 
                    "ToPort": 9300, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-ebe1ac8f"
                        }
                    ], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 9200, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }, 
                        {
                            "CidrIp": "75.69.252.208/32"
                        }, 
                        {
                            "CidrIp": "73.219.237.249/32"
                        }, 
                        {
                            "CidrIp": "73.253.186.19/32"
                        }, 
                        {
                            "CidrIp": "209.6.200.226/32"
                        }, 
                        {
                            "CidrIp": "50.187.58.239/32"
                        }, 
                        {
                            "CidrIp": "75.67.236.14/32"
                        }, 
                        {
                            "CidrIp": "209.6.205.245/32"
                        }, 
                        {
                            "CidrIp": "50.232.84.34/32"
                        }, 
                        {
                            "CidrIp": "50.232.84.43/32"
                        }, 
                        {
                            "CidrIp": "96.95.188.89/32"
                        }, 
                        {
                            "CidrIp": "209.6.37.244/32"
                        }, 
                        {
                            "CidrIp": "132.177.238.64/32"
                        }
                    ], 
                    "ToPort": 9200, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-ebe1ac8f"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "Elasticsearch", 
            "VpcId": "vpc-6453ed01", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-ebe1ac8f"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "launch-wizard-2 created 2016-07-19T13:37:46.094-04:00", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "50.176.80.224/32"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "hubot", 
            "VpcId": "vpc-6453ed01", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-769b9f0d"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "launch-wizard-1 created 2014-09-26T16:22:36.338-04:00", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }, 
                {
                    "PrefixListIds": [], 
                    "FromPort": 27017, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 27017, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "launch-wizard-1", 
            "VpcId": "vpc-6453ed01", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-c24b7ea7"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "launch-wizard-2 created 2016-11-21T16:36:58.912-05:00", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "launch-wizard-2", 
            "VpcId": "vpc-6453ed01", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-f7b8318a"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Created from the RDS Management Console", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 3306, 
                    "IpRanges": [
                        {
                            "CidrIp": "50.176.80.224/32"
                        }
                    ], 
                    "ToPort": 3306, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "rds-launch-wizard", 
            "VpcId": "vpc-6453ed01", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-2a25c651"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Security Group for Elastic Load Balancer VPC-devenv", 
            "Tags": [
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/VPC-devenv/43b7eb30-d832-11e6-8f43-50faeaa964fd", 
                    "Key": "Application"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/VPC-devenv/43b7eb30-d832-11e6-8f43-50faeaa964fd", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "cfteststack-LoadBalancerSG", 
                    "Key": "Name"
                }, 
                {
                    "Value": "AWSEBLoadBalancerSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "VPC-devenv", 
                    "Key": "aws:cloudformation:stack-name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 80, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 80, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "VPC-devenv-AWSEBLoadBalancerSecurityGroup-P98HGOIF4HVX", 
            "VpcId": "vpc-17f14e71", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-2b4db457"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Security Group for EC2 Instances in VPC-devenv", 
            "Tags": [
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/VPC-devenv/43b7eb30-d832-11e6-8f43-50faeaa964fd", 
                    "Key": "Application"
                }, 
                {
                    "Value": "cfteststack-EC2SG", 
                    "Key": "Name"
                }, 
                {
                    "Value": "AWSEBSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/VPC-devenv/43b7eb30-d832-11e6-8f43-50faeaa964fd", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "VPC-devenv", 
                    "Key": "aws:cloudformation:stack-name"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 8080, 
                    "IpRanges": [], 
                    "ToPort": 8080, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-2b4db457"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "VPC-devenv-AWSEBSecurityGroup-E20FDYQEQHF8", 
            "VpcId": "vpc-17f14e71", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-e64db49a"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Security group for RDS DB Instance.", 
            "Tags": [
                {
                    "Value": "VPC-devenv", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "cfteststack-DatabaseSG", 
                    "Key": "Name"
                }, 
                {
                    "Value": "DBSecurityGroup", 
                    "Key": "aws:cloudformation:logical-id"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/VPC-devenv/43b7eb30-d832-11e6-8f43-50faeaa964fd", 
                    "Key": "Application"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:709761231924:stack/VPC-devenv/43b7eb30-d832-11e6-8f43-50faeaa964fd", 
                    "Key": "aws:cloudformation:stack-id"
                }
            ], 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 3306, 
                    "IpRanges": [
                        {
                            "CidrIp": "96.95.188.89/32"
                        }
                    ], 
                    "ToPort": 3306, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [
                        {
                            "UserId": "709761231924", 
                            "GroupId": "sg-e64db49a"
                        }
                    ], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "VPC-devenv-DBSecurityGroup-17JCLGRYD7WTY", 
            "VpcId": "vpc-17f14e71", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-ba4db4c6"
        }, 
        {
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1", 
                    "PrefixListIds": [], 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "Description": "Cassandra", 
            "IpPermissions": [
                {
                    "PrefixListIds": [], 
                    "FromPort": 22, 
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ], 
                    "ToPort": 22, 
                    "IpProtocol": "tcp", 
                    "UserIdGroupPairs": [], 
                    "Ipv6Ranges": []
                }
            ], 
            "GroupName": "VPC_Cassandra", 
            "VpcId": "vpc-6453ed01", 
            "OwnerId": "709761231924", 
            "GroupId": "sg-dcf164a6"
        }
    ]
}
